--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,15 +2,8 @@
   <div class="comment-wrapper">
     {% if site.discus-identifier %}
     <div id="disqus_thread" class="article-comments"></div>
-    <script>
-      (function() {
-          var d = document, s = d.createElement('script');
-          s.src = '//{{ site.discus-identifier }}.disqus.com/embed.js';
-          s.setAttribute('data-timestamp', +new Date());
-          (d.head || d.body).appendChild(s);
-      })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <script src="https://utteranc.es/client.js" repo="le951/post" issue-term="pathname" theme="github-light"
+      crossorigin="anonymous" async> </script>
     {% endif %}
   </div>
 </section> <!-- End Comment Area -->
