--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
     {% endfor %}
   {% endif %}
 
-    <meta name="twitter:card" content="summary">
+    <!-- <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@{{ site.site-twitter }}">
     <meta name="twitter:creator" content="@{{ site.social-twitter }}">
   {% if page.title %}
@@ -63,7 +63,7 @@
     <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}">
   {% else %}
     <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.author-img }}">
-  {% endif %}
+  {% endif %} -->
 
 	<meta name="description" content="{{ page.description }}">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
